samples/_failures_safe/1761451075_25a9bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_939a3834.c: In function ‘main’:
./samples/SAFE/__tmp_939a3834.c:152:16: error: missing terminating " character
  152 |         printf("\nMatrix
      |                ^~~~~~~~~
./samples/SAFE/__tmp_939a3834.c:152:9: error: expected expression at end of input
  152 |         printf("\nMatrix
      |         ^~~~~~
./samples/SAFE/__tmp_939a3834.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_939a3834.c:152:9: error: expected declaration or statement at end of input
